objects/Book__c.object
<CustomObject>
    <fields>
        <fullName>BookAuthor__c</fullName>
        <label>BookAuthor</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BookDesc__c</fullName>
        <label>BookDesc</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>BookPages__c</fullName>
        <label>BookPages</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BookPrintedBy__c</fullName>
        <label>BookPrintedBy</label>
        <length>224</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BookReviews__c</fullName>
        <label>BookReviews</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PendingPurchaseBooks__c</fullName>
        <label>PendingPurchaseBooks</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>c</fullName>
                </value>
                <value>
                    <fullName>java</fullName>
                </value>
                <value>
                    <fullName>.net</fullName>
                </value>
                <value>
                    <fullName>Webservice</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PruchaseBooksList__c</fullName>
        <description>Purchasing books list</description>
        <label>PruchaseBooksList</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>C</fullName>
                </value>
                <value>
                    <fullName>C++</fullName>
                </value>
                <value>
                    <fullName>JAVA</fullName>
                </value>
                <value>
                    <fullName>Hibernate</fullName>
                </value>
                <value>
                    <fullName>Webservices</fullName>
                </value>
                <value>
                    <fullName>PHP</fullName>
                </value>
                <value>
                    <fullName>.Net</fullName>
                </value>
                <value>
                    <fullName>Cloud Computing</fullName>
                </value>
                <value>
                    <fullName>Salesforce</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SamplePiclist1__c</fullName>
        <label>SamplePiclist1</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>aa</fullName>
                </value>
                <value>
                    <fullName>bb</fullName>
                </value>
                <value>
                    <fullName>cc</fullName>
                </value>
                <value>
                    <fullName>dd</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Book</label>
    <nameField>
        <label>Book Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Books</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>BookAuthorValidationRule</fullName>
        <active>true</active>
        <errorConditionFormula>LEN(BookAuthor__c) &gt; 0</errorConditionFormula>
        <errorDisplayField>BookAuthor__c</errorDisplayField>
        <errorMessage>Author Name should not be empty</errorMessage>
    </validationRules>
</CustomObject>